[package]
name = "gap_solver"
version = "0.2.0"
authors = ["Stijn de Gooijer"]
edition = "2018"
description = "A solver for the generalized assignment problem."
repository = "https://github.com/stinodego/gap_solver"
license = "MIT"
keywords = ["assignment", "search", "graph", "mathematics", "algorithm"]
categories = ["mathematics", "algorithms"]
include = ["/src/", "README.md"]

[dependencies]
num = "0.4.0"
log = "0.4.14"
